--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect ./src/index.js"
+    "start": "nodemon --inspect ./src/index.js",
+    "sass": "sass --watch ./src/resourse/sass/app.scss ./src/public/css/app.css"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "sass": "^1.80.4"
   }
 }
