--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --inspect ./src/index.js",
-    "sass": "sass --watch ./src/resourse/sass/app.scss ./src/public/css/app.css"
+    "sass": "sass --watch ./src/resourse/sass/app.scss ./src/public/css/app.css",
+    "beautiful": "lint-staged"
+  },
+  "lint-staged": {
+    "src/**/*.{js, json, scss}": "prettier --write --single-quote --trailing-comma all --tab-width 3"
   },
   "repository": {
     "type": "git",
@@ -23,8 +27,11 @@
     "express-handlebars": "^8.0.1"
   },
   "devDependencies": {
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "sass": "^1.80.4"
   }
 }
