--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --inspect ./src/index.js",
     "sass": "sass --watch ./src/resourse/sass/app.scss ./src/public/css/app.css",
-    "beautiful": "lint-staged"
+    "beautiful": "lint-staged",
+    "prepare": "husky"
   },
   "lint-staged": {
     "src/**/*.{js, json, scss}": "prettier --write --single-quote --trailing-comma all --tab-width 3"
